Resolved Overlapping Class Names/CSS styling

--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -28,6 +28,6 @@ h1 {
     color: white !important
 }
 
-.card {
+.productCard {
     margin: 10px
 }
